# miniray

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  freetype.lib  miniray.make  miniray.pro  premake4.lua  temporal
assets/: Sprite-0001.aseprite  bomber.aseprite  fs_debug.frag  fs_font.frag  fs_mvptex_inst.frag  fs_plane.frag  fs_post.frag  fs_post_simple.frag  fs_quadanim.frag  mimapa.txt  physicalmob-1.ase  samplesrobot.aseprite  vs_debug.vert  vs_font.vert  vs_mvptex_inst.vert  vs_plane.vert  vs_post.vert  vs_quadanim.vert  weapons.ase
box2ddep/: box2d.lib
data/: bott.ase  fs_plane.frag  fs_post.frag  vs_plane.vert
glrayfw/core/: fpscounter.h  transform.cpp
glrayfw/entity/controller/: entitycontroller.h
glrayfw/render/: Texture.cpp  mesh.h  shader.h
script/: genprojs.sh  regen.sh
src/: CMakeLists.txt  constants.h  constants.h.gch  game.pro  input.h  playeractor.h  r8d9actor.h  tags
src/ailib/: mapsearchnode.h
src/app/: app.cpp  app.h  sdlglapp.h
src/assets/: assets.h
src/core/: dynamicarray.h  matrix2d.h  random.h  transform.cpp  transform.h  unordereddynamicarray.h
src/entity/: actor.h  bullet.h  entity.cpp  entity.h  entityfactory.cpp  entityfactory.h  mob.h  pickup.h  player.h
src/entity/controller/: bulletcontroller.h  debugtransformcontroller.cpp  debugtransformcontroller.h  entitycontroller.cpp  entitycontroller.h  mobaicontroller.cpp  mobaicontroller.h  moboptioncontroller.h  nullcontroller.h  playerhumancontroller.cpp  playerhumancontroller.h  robaicontroller.h
src/entity/script/: effectsystem.h  helpers.cpp  helpers.h  inventory.h  playerweapon.h  weapon.h
src/entity/system/: healthchecker.cpp  healthchecker.h  system.cpp  system.h  weaponsystem.h
src/game/: CMakeLists.txt  constants.h  main.cpp
src/game/ailib/: blackboard.h
src/game/app/: app.cpp  app.h  gamescreen.cpp  gamescreen.h  mainscreen.cpp  mainscreen.h  persistentdata.cpp  persistentdata.h  screen.h  sdlglapp.h
src/game/entity/: actor.h  bullet.h  entityfactory.cpp  entityfactory.h  mob.h  pickup.h  player.h
src/game/entity/controller/: bulletcontroller.h  entitycontroller.cpp  entitycontroller.h  mobaicontroller.cpp  mobaicontroller.h  moboptioncontroller.cpp  moboptioncontroller.h  pickupcontroller.h  playerhumancontroller.cpp  playerhumancontroller.h
src/game/entity/script/: helpers.cpp  helpers.h  inventory.cpp  inventory.h  playerweapon.h  weapon.h
src/game/entity/skill/: shootskill.h  skillhelpers.h  skills.h
src/game/map/: map.h  mapdata.h  mapgen.cpp  mapgen.h
src/game/physics/: contactlistener.cpp  contactlistener.h
src/game/render/: Texture.cpp  Texture.h  assets.cpp  assets.h  camera.cpp  font.h  mesh.h  program.h  renderer.h  shader.h
src/game/texgen/: canvas.h  color.h  texgen.cpp
src/lib/glrayfw/app/: sdlglapp.cpp
src/lib/glrayfw/core/: core.h  transform.h
src/lib/glrayfw/entity/: entity.h  pawn.h
src/lib/glrayfw/entity/controller/: entitycontroller.cpp
src/lib/glrayfw/map/: map.h
src/lib/glrayfw/physics/: layers.h  physics.cpp  physics.h
src/lib/glrayfw/render/: Bitmap.h  Texture.h  animation.h  camera.h  font.h  plane.h  renderer.h  sdlcontext.cpp  sdlcontext.h  shader.cpp
src/map/: map.h  mapgen.cpp  mapgen.h  tile.h
src/physics/: contactlistener.cpp  layers.h  physics.cpp  physics.h
src/render/: .clang_complete  Bitmap.cpp  assets.h  block.cpp  block.h  context.cpp  context.h  font.h  quad.h  renderer.h  sdlcontext.h  shader.cpp  sprite3d.h
src/texgen/: canvas.cpp  canvas.h  color.h  texgen.cpp  texgen.h
